# 350_seattle_building_ownership

./: How to Find Building Owners.ipynb  README.md  pyproject.toml
.ipynb_checkpoints/: requirements-checkpoint.txt  unique_downtown_owners-checkpoint.csv
data/raw_input/: 2020_Building_Energy_Benchmarking.csv
data/results/: additional_matches_1.csv  building_owners_downtown.csv  companies_and_principals.csv  exact_matches_1.csv  potential_matches_1.csv
parent_company_search/: How to Find Building Owners.ipynb
src/building_search/: setup.py
utils/: corp_owners.py
